// Copyright 2023 drey7925
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package perovskite.protocol.coordinates;

message BlockCoordinate {
    sint32 x = 1;
    sint32 y = 2;
    sint32 z = 3;
}

message ChunkCoordinate {
    sint32 x = 1;
    sint32 y = 2;
    sint32 z = 3;
}

message Vec3D {
    double x = 1;
    double y = 2;
    double z = 3;
}

message Angles {
    double deg_azimuth = 1;
    double deg_elevation = 2;
}